# automatic-SLR

./: README.md  Scopus.csv  WOS.csv  asreview.ipynb  main.py  paper_selection_IEEE.ipynb  paper_selection_SBERT.ipynb  paper_selection_TFIDF_IEEE.ipynb  pyproject.toml  screening-SBERT.ipynb  screening.ipynb  screening_TFIDF.ipynb  screening_batch.ipynb
outputs/: output12.csv  output13.csv  output16.csv  output17.csv  output2.csv  output20.csv  output23.csv  output25.csv  output26.csv  output27.csv  output28.csv  output29.csv  output30.csv  output31.csv  output34.csv  output35.csv  output36.csv  output38.csv  output39.csv  output40.csv  output44.csv  output47.csv  output5.csv  output50.csv  output51.csv  output52.csv  output55.csv  output56.csv  output57.csv  output59.csv  output6.csv  output60.csv  output61.csv  output65.csv  output66.csv  output7.csv  output9.csv
outputs_wos/: combined_wos.csv  output1.csv  output10.csv  output11.csv  output14.csv  output15.csv  output18.csv  output19.csv  output21.csv  output22.csv  output24.csv  output3.csv  output32.csv  output33.csv  output37.csv  output4.csv  output41.csv  output42.csv  output43.csv  output45.csv  output46.csv  output48.csv  output49.csv  output53.csv  output54.csv  output58.csv  output62.csv  output63.csv  output64.csv  output67.csv  output68.csv  output69.csv  output8.csv
